# zoitechat

./: README.md  fedora-mingw64.ini  meson.build  readme.md
.github/workflows/: ubuntu-build.yml  windows-build.yml
data/icons/: meson.build
data/man/: zoitechat.1.in
data/misc/: io.github.Zoitechat.Plugin.metainfo.xml.in  io.github.Zoitechat.appdata.xml.in  io.github.Zoitechat.desktop.in.in  meson.build
debian/: changelog  control
flatpak/: io.github.Zoitechat.json
osx/: launcher.sh  zoitechat.bundle
plugins/: meson.build
plugins/python/: python.py
plugins/upd/: upd.c
po/: POTFILES  POTFILES.skip  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  (+15 more)
src/: version-script
src/common/: outbound.c
src/fe-gtk/: ascii.c  banlist.c  chanlist.c  chanview-tabs.c  chanview-tree.c  chanview.c  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fkeys.c  gtkutil.c  ignoregui.c  joind.c  maingui.c  menu.c  meson.build  notifygui.c  plugin-tray.c  plugingui.c  rawlog.c  servlistgui.c  setup.c  sexy-spell-entry.c  textgui.c  urlgrab.c  userlistgui.c
win32/: zoitechat.props
win32/copy/: copy.vcxproj
win32/installer/: zoitechat.iss.tt
