icondir = join_paths(get_option('datadir'), 'icons/hicolor')
install_data(
  'zoitechat.png',
  rename: 'io.github.Zoitechat.png',
  install_dir: join_paths(icondir, '48x48/apps')
)
install_data(
  'zoitechat.svg',
  rename: 'io.github.Zoitechat.svg',
  install_dir: join_paths(icondir, 'scalable/apps')
)
